@@ -1,3 +1,10 @@
+2001-12-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/save.c (save_set_all): Put #ifdef PM3D around pm3d-only
+ 	code regions.
+
+	* src/show.c (show_command): Dito.
+
 2001-12-01  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>
 
 	* src/eval.c src/fit.c src/plot.c src/os2/gclient.c
